fixed layout issues

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body {
+
   font-family:'Montserrat',sans-serif;
   background-color: #f7f7f7;
   color: #0A2463;
@@ -69,7 +70,7 @@ button:hover {
 
 
 .app {
-  font-family: sans-serif;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -213,26 +214,54 @@ button[type="register"] {
 
 /* Style the header */
 header {
+  border-radius: 5px;
   height: 100px;
-  background-color: #fe6d73 ;
+  background-color: #2a7fb3; ;
   padding: 30px;
   text-align: center;
   font-size: 25px;
   color: white;
-  width: 84.5%;
+  width: 100%;
 }
 
 .dash-header {
   margin-top: 5px;
+  color: white;
+}
 
+.user-header {
+
+  font-size: 20px;
+  color: white;
+  margin-top: -5px;
+  text-align: left;
+
+}
+
+.user-data {
+  height: 50px;
+}
+
+.user-points {
+  font-size: 20px;
+  color: white;
+  margin-top: -5px;
+  text-align: center;
+}
+.user-feed-post {
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  margin-top: -5px;
 }
 
 /* Create two columns/boxes that floats next to each other */
 nav {
+  border-radius: 5px;
   float: left;
   width: 15%;
   height: 100vh;
-  background-color: #17c3b2;
+  background-color: #2a7fb3;
   padding: 20px;
 }
 
@@ -243,13 +272,21 @@ nav ul {
 }
 
 article {
+  border-radius: 5px;
   float: left;
   padding: 20px;
   width: 85%;
   background-color: white;
-  height: 100vh;
+  border: 1px solid black;
+  height: 30vh;
+
 
    /* only for demonstration, should be removed */
+}
+
+.feed {
+  width: 85%;
+  height: 20vh;
 }
 
 /* Clear floats after the columns */
@@ -261,7 +298,8 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #fe6d73;
+  border-radius: 5px;
+  background-color: #2a7fb3;;
   padding: 10px;
   text-align: center;
   color: white;
